--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "shorter",
   "homepage": "https://nusrat52.github.io/reactLinkSortener",
-
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
