--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shorter",
-  "homepage": "https://nusrat52.github.io/reactLinkshorter",
+  "homepage": "http://nusrat52.github.io/reactLinkshorter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
